# aspect

./: .gitignore  CMakeLists.txt  INSTALL-OPeNDAP  README-OPeNDAP.md  README.md
cmake/modules/: FindLIBDAP.cmake
contrib/opendap/input_files/: lithospheric_thickness.csv  lithospheric_thickness.txt
contrib/opendap/prm_files/: aspect_url_test.prm
contrib/opendap/sph/: CMakeLists.txt  README  dofilt_ESEP_new  invexpandxy.cpp  mkexpmatxy.cpp  opendap_convert.cpp  opendap_convert.f90  sphadd.f90  sphexp.cpp
contrib/opendap/sph/tomofilt_new_ESEP/: .gitignore  Makefile  Makefile.old  Makefile.opendap  README  dofilt_ESEP_new  dofilt_ESEP_opendap  inpm.SP12.name.dvp.repar.sph  inpm.SP12.name.dvs.repar.sph  readme_ESEP_new
contrib/opendap/sph/tomofilt_new_ESEP/geodyn/: Makefile  inpm.SP12.name.dvs.repar.sph  inpm.SP12.netcdf_columns.dvp.repar.sph  inpm.SP12.netcdf_columns.dvs.repar.sph
contrib/opendap/sph/tomofilt_new_ESEP/geodyn/examplemodel/: README
contrib/opendap/sph/tomofilt_new_ESEP/lib/: Makefile
contrib/opendap/sph/tomofilt_new_ESEP/lib/libHJVH/: Makefile
contrib/opendap/sph/tomofilt_new_ESEP/lib/libS20/: Makefile
contrib/opendap/sph/tomofilt_new_ESEP/lib/libSphFunc/: Makefile  kk
contrib/opendap/sph/tomofilt_new_ESEP/lib/libSphFunc_opendap/: Makefile  wsphhead.f
contrib/opendap/sph/tomofilt_new_ESEP/lib/libgeo/: Makefile
contrib/opendap/sph/tomofilt_new_ESEP/src/: Makefile  Makefile.opendap  opendap_convert.f  sphexp_opendap.f
include/aspect/: utilities.h
include/aspect/initial_temperature/: adiabatic_boundary.h  netcdf_data.h
opendap/input_files/: new_litho.malawi.fishwick.txt
opendap/prm_files/: aspect_malawi_fishwick_test.prm
regional_tomography/prm_file/: plate_boundaries_compositon.prm  regional_tomography.prm  test.prm
regional_tomography/tomo_plugins/: CMakeLists.txt  lithosphere.cc  lithosphere.h  regional_tomography.cc  regional_tomography.h  upper_mantle.cc
source/: utilities.cc
source/initial_temperature/: adiabatic_boundary.cc
unit_tests/: utilities.cc
